--- a/bill/bill.ipynb
+++ b/bill/bill.ipynb
@@ -5526,7 +5526,7 @@
     "from influxdb import InfluxDBClient\n",
     "import pandas as pd\n",
     "\n",
-    "client = InfluxDBClient('35.166.113.128', 8086, 'root', 'root', 'ascco_world')\n",
+    "client = InfluxDBClient('IP_Address', port, 'user', 'pass', 'dbname')\n",
     "row = client.query(\"SELECT * FROM energy_consumption WHERE time >= '2017-05-01' AND time <= '2017-05-30'\")\n",
     "pv_data = pd.DataFrame.from_dict(list(row)[0]).drop(['ac_time', 'host', 'region'], axis=1)"
    ]
